<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            style="@style/listItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/life_story_lines"/>

                <TextView
                    style="@style/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_life_story_lines"/>


            </LinearLayout>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/life_story_spinner"
                android:layout_toStartOf="@id/life_story_switch"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/life_story_switch"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <RelativeLayout
            style="@style/listItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/family_tree_lines"/>

                <TextView
                    style="@style/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_tree_lines"/>

            </LinearLayout>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/family_tree_spinner"
                android:layout_toStartOf="@id/family_tree_switch" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/family_tree_switch"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <RelativeLayout
            style="@style/listItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spouse_lines"/>

                <TextView
                    style="@style/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_spouse_lines"/>

            </LinearLayout>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spouse_lines_spinner"
                android:layout_toStartOf="@id/spouse_lines_switch" />


            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spouse_lines_switch"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <RelativeLayout
            style="@style/listItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/map_type"/>

                <TextView
                    style="@style/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/background_display_on_map"/>

            </LinearLayout>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/map_type_spinner"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/listItem"
            android:id="@+id/resync">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/re_sync_data"
                android:id="@+id/resync_field"/>

            <TextView
                style="@style/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="From FamilyMap Service"
                android:layout_below="@id/resync_field"/>
        </RelativeLayout>

        <RelativeLayout
            style="@style/listItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:id="@+id/logout_field"/>

            <TextView
                style="@style/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/returns_to_login_screen"
                android:layout_below="@id/logout_field"/>

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>